--- a/packages/bedroom-mark/room.yaml
+++ b/packages/bedroom-mark/room.yaml
@@ -102,6 +102,7 @@ scene:
       media_player.bedroom_mark:
         state: paused
       media_player.snapcast_client_bedroommark:
+        state: on
         is_volume_muted: true
 
   - name: bedroom_mark_sleep
