breaking-0.92: amcrest binary_sensors

--- a/packages/dahua-cameras.yaml
+++ b/packages/dahua-cameras.yaml
@@ -7,8 +7,9 @@ amcrest:
     password: !secret camera0_password
     resolution: "low"
     scan_interval: 30
+    binary_sensors:
+      - motion_detected
     sensors:
-      - motion_detector
       #- sdcard
       - ptz_preset
 
