--- a/people/mark.yaml
+++ b/people/mark.yaml
@@ -15,6 +15,7 @@ group:
       - device_tracker.mark_phone
       - device_tracker.mark_moto_g5
       - device_tracker.mark_moto_g5_bt
+      - device_tracker.moto_g_5
 
 binary_sensor:
   - name: mark_present
@@ -31,10 +32,17 @@ binary_sensor:
           platform: 'state'
           to_state: 'home'
 
+      # mobile app
+      - entity_id: device_tracker.moto_g_5
+        prob_given_true: 0.8
+        # Only leave the house without my phone to go running
+        prob_given_false: 0.1
+        <<: *tracker_default
+
       - entity_id: device_tracker.mark_moto_g5
         prob_given_true: 0.8
-        # Never leave the house without my phone
-        prob_given_false: 0.05
+        # Only leave the house without my phone to go running
+        prob_given_false: 0.1
         <<: *tracker_default
 
       - entity_id: device_tracker.mark_moto_g5_bt
