--- a/notify/groups.yaml
+++ b/notify/groups.yaml
@@ -2,25 +2,23 @@
 - name: automations
   platform: group
   services:
-    - service: mobile_app_moto_g_5
+    - service: mobile_app_mark_moto_g5
 
 - name: admin
   platform: group
   services:
-    - service: ios_marks_iphone
-    - service: html5_markmotog5
-    - service: mobile_app_moto_g_5
+    - service: mobile_app_mark_s_iphone
+    - service: mobile_app_mark_moto_g5
 
 # All Barnmates
 - name: whalebarn
   platform: group
   services:
-    - service: ios_marks_iphone
-    - service: ios_thomas_cmtcd
+    - service: mobile_app_mark_s_iphone
+    - service: mobile_app_thomas_cmtcd
     - service: ios_annies_iphone2
-    - service: html5_markmotog5
     - service: html5_marktablet
-    - service: mobile_app_moto_g_5
+    - service: mobile_app_mark_moto_g5
 
 # Barnacles
 - name: barnacles
@@ -42,17 +40,16 @@
 - name: all_iphones
   platform: group
   services:
-    - service: ios_marks_iphone
-    - service: ios_thomas_cmtcd
+    - service: mobile_app_mark_s_iphone
+    - service: mobile_app_thomas_cmtcd
     - service: ios_annies_iphone2
 
 # All androids
 - name: all_androids
   platform: group
   services:
-    - service: html5_markmotog5
     - service: html5_lianemotog
-    - service: mobile_app_moto_g_5
+    - service: mobile_app_mark_moto_g5
 
 # All tablets
 - name: all_tablets
