--- a/automation/heating-on-demand-v2.yaml
+++ b/automation/heating-on-demand-v2.yaml
@@ -16,14 +16,13 @@
     - platform: state
       entity_id: climate.ballroom_thermostat
     - platform: state
+      entity_id: climate.guest_room_thermostat
+    - platform: state
       entity_id: climate.bedroom_mark_thermostat
     - platform: state
-      entity_id: climate.bedroom_annex2_thermostat
+      entity_id: climate.bedroom_main2_thermostat
     - platform: state
-      entity_id: climate.guest_room_thermostat
-    ## bedroom_jerome ui uses js_bedroom thermostat directly
-    #- platform: state
-    #- entity_id: climate.bedroom_jerome_thermostat
+      entity_id: climate.bedroom_annex2_thermostat
   action:
     - service: climate.set_temperature
       data_template:
