--- a/packages/bedroom-annex2/room.yaml
+++ b/packages/bedroom-annex2/room.yaml
@@ -1,42 +1,33 @@
 #
-# Bedroom Annex 2
+# Ros's Room
 #
 
 homeassistant:
   customize:
-    sensor.bedroom_annex2_temperature:
-      friendly_name: "Annex Bedroom 2"
     sensor.bedroom_annex2_battery:
-      friendly_name: "Annex Bedroom 2 Battery"
       icon: mdi:battery
-
-    climate.bedroom_annex2_thermostat:
-      friendly_name: "Annex Bedroom 2"
     climate.bedroom_annex2_comfort_setpoint:
       min_temp: 5
       max_temp: 25
 
 group:
-  bedroom_annex2:
-    name: "Annex Bedroom 2"
-    icon: mdi:hotel
-    #view: true
-    entities:
-    - group.bedroom_annex2_compact_ui
-
+  # floorplan
   bedroom_annex2_compact_ui:
     name: "Monica's Bedroom"
     view: false
     entities:
     - input_select.bedroom_annex2_mode
     - climate.bedroom_annex2_thermostat
-    - group.g_bedroom_annex2_settings_ui
+    - group.bedroom_annex2_lights
 
   bedroom_annex2_setpoints:
-    name: "Annex Bedroom 2 Setpoints"
     view: false
     entities:
     - climate.bedroom_annex2_comfort_setpoint
+
+  bedroom_annex2_lights:
+    view: false
+
 
 scene:
   - name: bedroom_annex2_off
@@ -69,5 +60,5 @@ sensor:
         unit_of_measurement: '%'
         entity_id: zwave.bedroom_annex2
 
+#automation: !include_dir_merge_list automations
 #script: !include_dir_merge_named scripts
-
