--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -186,7 +186,7 @@ views:
       - sensor.aeotec_dsb05_multisensor_temperature
       - sensor.hall_temperature
       - sensor.annex_hall_mean_temperature
-      - sensor.camera_0_motion_detected
+      - binary_sensor.camera_0_motion_detected
     cards:
       - type: entities
         title: Hall
