--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -355,6 +355,17 @@ views:
           - input_number.snapcast_client_ballroom
           - input_number.snapcast_client_bedroom_mark
           - input_number.snapcast_client_outside
+      - type: vertical-stack
+        cards:
+          - name: "Kitchen Amplifier"
+            type: media-control
+            entity: media_player.outside_amplifier_zone_2
+          - name: Ballroom Amplifier
+            type: media-control
+            entity: media_player.ballroom_amplifier
+          - name: Outside Amplifier
+            type: media-control
+            entity: media_player.outside_amplifier
 
   - title: Settings
     icon: mdi:settings
