--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -23,6 +23,7 @@ groups:
       - group.ballroom_compact_ui
       - group.bedroom_mark_compact_ui
       - group.bedroom_main2_compact_ui
+      - group.bedroom_main3_compact_ui
       - group.bedroom_annex2_compact_ui
       - group.guest_room_compact_ui
     # Just the first word of the name
@@ -41,6 +42,7 @@ groups:
         - sensor.bedroom_mark_temperature
         - sensor.bedroom_annex2_mean_temperature
         - sensor.bedroom_main2_mean_temperature
+        - sensor.bedroom_main3_mean_temperature
         - sensor.guest_room_mean_temperature
     text_template: '${entity.state != "unknown" ? entity.state + "°C" : "?? °C"}'
     class_template: '
@@ -71,6 +73,7 @@ groups:
       - climate.study_thermostat
       - climate.guest_room_thermostat
       - climate.bedroom_main2_thermostat
+      - climate.bedroom_main3_thermostat
       - climate.bedroom_annex2_thermostat
     text_template: '${entity.attributes.temperature != "unknown" ? entity.attributes.temperature + "°C" : "?? °C"}'
     class_template: '
