--- a/people/barnacles.yaml
+++ b/people/barnacles.yaml
@@ -1,3 +1,5 @@
 - binary_sensor.jerome_present
 - binary_sensor.ros_present
 - binary_sensor.liane_present
+- binary_sensor.aneta_present
+- binary_sensor.thomas_present
